<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smarthome.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scene"
        android:name="com.example.smarthome.ui.scene.SceneFragment"
        android:label="@string/title_scene"
        tools:layout="@layout/fragment_scene" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.smarthome.ui.mine.MineSettingsFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>