<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/living_light"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline50"
                app:layout_constraintEnd_toStartOf="@+id/guideline52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <soup.neumorphism.NeumorphImageView
                android:id="@+id/neumorphImageView"
                android:layout_width="0dp"
                android:scaleType="centerInside"
                android:layout_height="0dp"
                android:src="@drawable/checked"
                app:layout_constraintBottom_toTopOf="@+id/guideline50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline52"
                app:layout_constraintTop_toTopOf="parent"
                app:neumorph_shapeType="pressed" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_proper"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline49"
                app:layout_constraintEnd_toStartOf="@+id/guideline52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline50" />

            <soup.neumorphism.NeumorphImageView
                android:id="@+id/neumorphImageView2"
                android:layout_width="0dp"
                android:scaleType="centerInside"
                android:layout_height="0dp"
                android:src="@drawable/checked"
                app:layout_constraintBottom_toTopOf="@+id/guideline49"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline52"
                app:layout_constraintTop_toBottomOf="@+id/neumorphImageView"
                app:neumorph_shapeType="pressed" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_proper"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline51"
                app:layout_constraintEnd_toStartOf="@+id/guideline52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline49" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_high"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline51" />

            <soup.neumorphism.NeumorphImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/checked"
                app:layout_constraintBottom_toTopOf="@+id/guideline51"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline52"
                app:layout_constraintTop_toTopOf="@+id/guideline49"
                app:neumorph_shapeType="pressed" />

            <soup.neumorphism.NeumorphImageView
                android:id="@+id/neumorphImageView3"
                android:layout_width="0dp"
                android:scaleType="centerInside"
                android:layout_height="0dp"
                android:src="@drawable/checked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline52"
                app:layout_constraintTop_toTopOf="@+id/guideline51"
                app:neumorph_shapeType="pressed" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </soup.neumorphism.NeumorphCardView>
</androidx.constraintlayout.widget.ConstraintLayout>